# seashield

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
client/SeaShield/: .gitignore  SeaShield.uproject
client/SeaShield/Config/: DefaultEngine.ini
client/SeaShield/Content/SeaShield/Maps/: L_Range.umap  L_RangeCustom.umap
client/SeaShield/Content/SeaShield/Materials/: MI_SeaOcean.uasset  MI_SeaOceanLOD.uasset  M_Burst.uasset  M_Debris.uasset  M_FarOcean.uasset  M_Gunmetal.uasset  M_MissileBody.uasset  M_Muzzle.uasset  M_NavalGray.uasset  M_NavalHull.uasset  M_Ocean.uasset  M_OceanFar.uasset  M_OceanGame.uasset  M_Rain.uasset  M_RocketBody.uasset  M_RocketSmoke.uasset  M_RocketTrail.uasset  M_SensorDark.uasset  M_Splash.uasset  M_Spray.uasset  M_SpraySprite.uasset  M_Wake.uasset  M_WakeRibbon.uasset
client/SeaShield/Content/SeaShield/Meshes/: SM_Frigate.uasset  SM_LauncherBase.uasset  SM_LauncherMount.uasset  SM_LauncherTubes.uasset  SM_Missile.uasset  SM_Ocean.uasset  SM_Rocket.uasset
client/SeaShield/Content/SeaShield/Textures/: T_DeckMarkings.uasset  T_Flash.uasset  T_HullMarkings.uasset  T_ShipDetail_N.uasset  T_ShipDetail_N2.uasset  T_ShipDetail_RAO.uasset  T_ShipDetail_RAO2.uasset  T_Smoke.uasset  T_SpraySheet.uasset  T_WaterRipple_N.uasset
client/SeaShield/Content/SeaShield/VFX/: NS_Spray.uasset
client/SeaShield/Source/: SeaShield.Target.cs  SeaShieldEditor.Target.cs
client/SeaShield/Source/SeaShield/: SeaAfterActionWidget.cpp  SeaAfterActionWidget.h  SeaBallistics.h  SeaEnvironmentController.cpp  SeaEnvironmentController.h  SeaFireControlPanel.cpp  SeaFireControlPanel.h  SeaGameHudWidget.cpp  SeaGameHudWidget.h  SeaGunnerPawn.cpp  SeaGunnerPawn.h  SeaGunsightWidget.cpp  SeaGunsightWidget.h  SeaHudStyle.h  SeaLevelSetupLibrary.cpp  SeaLevelSetupLibrary.h  SeaNetSubsystem.cpp  SeaNetSubsystem.h  SeaPpiWidget.cpp  SeaPpiWidget.h  SeaShield.Build.cs  SeaShieldGameModeBase.cpp  SeaShieldGameModeBase.h  SeaShieldModule.cpp  SeaShieldPlayerController.cpp  SeaShieldPlayerController.h  SeaVfxSystems.cpp  SeaVfxSystems.h  SeaWorldFrame.h  SeaWorldManager.cpp  SeaWorldManager.h
client/SeaShield/Source/SeaShieldCore/: SeaShieldCore.Build.cs  SeaShieldCoreModule.cpp  SeaShieldCoreSymbols.h  repo_client_core
client/SeaShield/Tools/: apply_custom.py  apply_ocean.py  build_niagara.py  build_ocean_mat.py  capture_level.py  cinematic.cvars  cinematic_shot.sh  gen_spray_flipbook.py  import_assets.py  import_ocean.py  import_textures.py  ocean_iter.sh  patch_level.py  perf_capture.sh  perf_summary.sh  play_game.sh  probe_water_params.py  record_coop.sh  record_demo.sh  record_window.swift  reimport_frigate.py  run_watched.sh  setup_level.py  setup_materials.py  showcase_shots.sh  tune_light.py  tune_mats.py  tune_water.py
client/core/: client_session.cpp  client_session.h  coords.h  interp_buffer.cpp  interp_buffer.h
core/: logger.cpp  logger.h  math.h  matrix.h  pcg32.h  spsc_queue.h  unique_fd.h
docs/: 01-기획서.md  02-어필포인트-면접매핑.md  traceability-matrix.md
docs/architecture/: client-design.md  client-runbook.md  network-design.md  protocol-spec.md  simulation-models.md
docs/presentation/: storyline.md
docs/reports/: fire-control-experiments.md  performance-report.md
docs/reports/data/: dispersion.md  environment.md  horizon.md  multiclient-proof.summary.txt  qr.md  range.md  salvo.md  settle.md  turn.md  weave.md
net/: acceptor.cpp  acceptor.h  epoll_event_loop.cpp  epoll_event_loop.h  event_loop.cpp  event_loop.h  frame_parser.cpp  frame_parser.h  kqueue_event_loop.cpp  kqueue_event_loop.h  send_queue.cpp  send_queue.h  socket_util.cpp  socket_util.h  tcp_session.cpp  tcp_session.h  udp_endpoint.cpp  udp_endpoint.h
protocol/: messages.cpp  messages.h  reliable.cpp  reliable.h  wire.h
scenarios/: calm-asm.scn  crossing-asm.scn  demo-fire.scn  game.scn  rain-asm.scn  storm-asm.scn  stress-500.scn  wx-clear.scn  wx-fog.scn  wx-mist.scn  wx-showcase.scn
scripts/: Dockerfile.linux  linux-test.sh  mac-sanitize.sh  multiclient_proof.sh
server/: main.cpp  sim_server.cpp  sim_server.h
sim/: ballistics.cpp  ballistics.h  constants.h  engagement.h  environment.cpp  environment.h  fire_control.cpp  fire_control.h  journal.cpp  journal.h  radar.cpp  radar.h  scenario.cpp  scenario.h  state_hash.h  target.cpp  target.h  tracking.cpp  tracking.h  world.cpp  world.h
tests/: ballistics_test.cpp  client_core_test.cpp  client_session_test.cpp  determinism_test.cpp  engagement_test.cpp  environment_test.cpp  event_loop_test.cpp  experiment_smoke_test.cpp  fire_control_test.cpp  frame_parser_test.cpp  integration_test.cpp  math_test.cpp  matrix_test.cpp  messages_test.cpp  pcg32_test.cpp  protocol_integration_test.cpp  radar_test.cpp  reliable_test.cpp  scenario_test.cpp  send_queue_test.cpp  spsc_queue_test.cpp  target_test.cpp  tracking_test.cpp  unique_fd_test.cpp  wire_test.cpp  world_test.cpp
tests/golden/: ballistics_ref.csv  determinism-darwin-arm64.txt  determinism-linux-arm64.txt  kalman_ref.csv
tools/: dummy_client.cpp  dummy_client.h  dummyclient_main.cpp  loadclient.cpp  net_chaos_proxy.cpp  net_chaos_proxy.h  netproxy_main.cpp
tools/assets/: asset_lib.py  frigate.py  launcher.py  missile.py  ocean.py  rocket.py  textures.py
tools/ballistic_sandbox/: main.cpp
tools/experiment/: aggregate.py  experiment.cpp  experiment.h  main.cpp
tools/reference/: ballistics_ref.py  kalman_ref.py
